--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -23,10 +23,10 @@
 - title: Topics
 
 - title: 0. Overview
-- 0overview
+- overview0
 
 - title: 1. Software Engineering
-- 1intro
-- 1tradeng
-- 1agile
-- 1ooa
+- intro1
+- tradeng1
+- agile1
+- ooa1
