--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -23,10 +23,10 @@
 - title: Topics
 
 - title: 0. Overview
-- overview0
+- overview
 
 - title: 1. Software Engineering
-- intro1
-- tradeng1
-- agile1
-- ooa1
+- intro
+- tradeng
+- agile
+- ooa
