--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -52,3 +52,12 @@
   - pyg-0-intro
   - pyg-1-basics
   - pyg-2-animation
+
+-title: 5. Design Patterns Introduction
+  docs:
+  - despat-0-intro
+  - despat-1
+  - despat-2
+  - despat-3
+  - despat-4
+  - despat-5
