--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -83,9 +83,15 @@
   - pat1-6
   - pat1-7
   - pat1-8
-  
+  - pat1-9
 
-- title: 8. Sprints
+- title: 8. Other Pattern Concepts
+  docs:
+  - other-0
+  - other-1
+
+
+- title: 9. Sprints
   docs:
   - sprint-0
   - sprint-1
