--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -84,11 +84,12 @@
   - pat1-7
   - pat1-8
   - pat1-9
+  - pat1-10
 
 - title: 8. Other Pattern Concepts
   docs:
   - other-0
-  
+  - other-1  
 
 
 - title: 9. Sprints
