--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -37,62 +37,62 @@
 
 - title: 2. Python
   docs:
-  - py-intro
-  - py-1
-  - py-2
-  - py-3
-  - py-5
+#  - py-intro
+#  - py-1
+#  - py-2
+#  - py-3
+#  - py-5
 
 - title: 3. Python OOPs
   docs:
-  - pyoops-1
-  - pyoops-2
+#  - pyoops-1
+#  - pyoops-2
 
 - title: 4. Pygame
   docs:
-  - pyg-0-intro
-  - pyg-1-basics
-  - pyg-2-animation
+#  - pyg-0-intro
+#  - pyg-1-basics
+#  - pyg-2-animation
 
 - title: 5. Design Patterns Introduction
   docs:
-  - despat-0-intro
-  - despat-1
-  - despat-2
-  - despat-3
-  - despat-4
-  - despat-5
+#  - despat-0-intro
+#  - despat-1
+#  - despat-2
+#  - despat-3
+#  - despat-4
+#  - despat-5
 
 - title: 6. Scrum Projects
   docs:
-  - agile-0
-  - agile-1
-  - agile-2
-  - agile-3
-  - agile-4
-  - agile-tasks
+#  - agile-0
+#  - agile-1
+#  - agile-2
+#  - agile-3
+#  - agile-4
+#  - agile-tasks
 
 - title: 7. Design Patterns
   docs:
-  - pat1-0
-  - pat1-1
-  - pat1-2
-  - pat1-3
-  - pat1-4
-  - pat1-5
-  - pat1-6
-  - pat1-7
-  - pat1-8
-  - pat1-9
-  - pat1-10
+#  - pat1-0
+#  - pat1-1
+#  - pat1-2
+#  - pat1-3
+#  - pat1-4
+#  - pat1-5
+#  - pat1-6
+#  - pat1-7
+#  - pat1-8
+#  - pat1-9
+#  - pat1-10
 
 - title: 8. Other Pattern Concepts
   docs:
-  - other-0
-  - other-1  
+#  - other-0
+#  - other-1  
 
 
-- title: 9. Sprints
+- title: Project Sprints
   docs:
-  - sprint-0
-  - sprint-1
+#  - sprint-0
+#  - sprint-1
