--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -37,11 +37,11 @@
 
 - title: 2. Python
   docs:
-#  - py-intro
-#  - py-1
-#  - py-2
-#  - py-3
-#  - py-5
+  - py-intro
+  - py-1
+  - py-2
+  - py-3
+  - py-5
 
 - title: 3. Python OOPs
   docs:
