--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -49,13 +49,22 @@
   - pyoops-2
   - pyoops-task1
 
-- title: 4. Pygame
+- title: 4. Scrum Projects
+  docs:
+  - agile-0
+  - agile-1
+  - agile-2
+  - agile-3
+  - agile-4
+  #- agile-tasks
+
+- title: 5. Pygame
   docs:
 #  - pyg-0-intro
 #  - pyg-1-basics
 #  - pyg-2-animation
 
-- title: 5. Design Patterns Introduction
+- title: 6. Design Patterns Introduction
   docs:
 #  - despat-0-intro
 #  - despat-1
@@ -64,14 +73,7 @@
 #  - despat-4
 #  - despat-5
 
-- title: 6. Scrum Projects
-  docs:
-#  - agile-0
-#  - agile-1
-#  - agile-2
-#  - agile-3
-#  - agile-4
-#  - agile-tasks
+
 
 - title: 7. Design Patterns
   docs:
