--- a/_data/docs.yml
+++ b/_data/docs.yml
@@ -89,20 +89,20 @@
   - pattern-2
   - pattern-3
 #  - pat1-1
-#  - pat1-2
-#  - pat1-3
-#  - pat1-4
-#  - pat1-5
-#  - pat1-6
-#  - pat1-7
+  - pat1-2
+  - pat1-3
+  - pat1-4
+  - pat1-5
+  - pat1-6
+  - pat1-7
 #  - pat1-8
-#  - pat1-9
-#  - pat1-10
+  - pat1-9
+  - pat1-10
 
 - title: 7. Other Pattern Concepts
   docs:
-#  - other-0
-#  - other-1  
+  - other-0
+  - other-1  
 
 
 #- title: Project Sprints
